# stockes

./: README.md  pyproject.toml
database/: TSLA.csv  dss.sql
stocks/: main.py  model.py  processing.py  schema.py
stocks/javascript/: script.js
stocks/static/: change_password.css  style.css  table_style.css  unauth.css
stocks/templates/: admin.html  auth_wrong.html  change_password.html  forgot_password.html  home.html  sign_in.html  sign_up.html  unauth.html
